--- a/.github/workflows/BuildAndValidateTabularModel.yml
+++ b/.github/workflows/BuildAndValidateTabularModel.yml
@@ -33,4 +33,4 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         shell: cmd
-        run: TabularEditor.exe .\AdventureWorks -A -SC -V -E
+        run: TabularEditor.exe .\AdventureWorks -A -SC -G -E
