--- a/.github/workflows/BuildAndValidateTabularModel.yml
+++ b/.github/workflows/BuildAndValidateTabularModel.yml
@@ -1,8 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
 name: BuildAndValidateTabularModel
-
-# Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
@@ -13,24 +9,26 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: windows-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Downloads Tabular Editor 2.x
       - name: Download Tabular Editor 2.x
         shell: pwsh
         run: .\Scripts\DownloadTE2.ps1
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run a Best Practice Analysis
         shell: cmd
-        run: TabularEditor.exe .\AdventureWorks -A -SC -G -E
+        run: TabularEditor.exe .\AdventureWorks -A -SC -G
+
+      - name: Perform data source schema scheck
+        shell: cmd
+        run: TabularEditor.exe .\AdventureWorks -S ".\Scripts\ReplaceDataSourceConnectionString.csx" -SC -G
+
+      - name: Deploy to Power BI
+        shell: cmd
+        run: TabularEditor.exe .\AdventureWorks -S ".\Scripts\ReplaceDataSourceConnectionString.csx" -D {{AS_CONNECTIONSTRING}} DatasetDeployedFromGitHub -O -C -G -E -W
