--- a/.github/workflows/BuildAndValidateTabularModel.yml
+++ b/.github/workflows/BuildAndValidateTabularModel.yml
@@ -1,10 +1,10 @@
 name: BuildAndValidateTabularModel
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  #push:
+  #  branches: [ main ]
+  #pull_request:
+  #  branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -23,7 +23,7 @@ jobs:
 
       - name: Run a Best Practice Analysis
         shell: cmd
-        run: TabularEditor.exe .\AdventureWorks -A -SC -G
+        run: TabularEditor.exe .\AdventureWorks -A -G
 
       - name: Perform data source schema scheck
         shell: cmd
