--- a/.github/workflows/BuildAndValidateTabularModel.yml
+++ b/.github/workflows/BuildAndValidateTabularModel.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   validation:
     runs-on: windows-latest
-    environment: dev
+    environment: Dev
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
